fix: stick add more filter in case of overflow

--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,6 @@
 .Table-filters--vertical {
   flex-direction: column;
   width: var(--spacing-9);
-  padding: 0 var(--spacing-l);
 }
 
 .Table-filters--scroll {
